# positionless-cpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
include/positionless/: algorithms.hpp  partitioning.hpp  translation.hpp
include/positionless/detail/: algorithm_data.hpp  algorithm_data_fwd.hpp  precondition.hpp
test/: algorithms_tests.cpp  partitioning_tests.cpp  translation_tests.cpp
test/detail/: forward_list_partitioning.hpp  partitioning_generators.hpp  rapidcheck_wrapper.hpp  vector_partitioning.hpp
